rpc第一次作业

--- a/rpc_homework/支持压缩算法.md
+++ b/rpc_homework/支持压缩算法.md
@@ -71,3 +71,17 @@ https://github.com/klauspost/compress
 
 ### Api设计
 三个方法（解压缩，和返回使用的压缩协议）
+```azure
+type Compresser interface {
+	Compress(in []byte) ([]byte, error)
+	Decompress(in []byte) ([]byte, error)
+	Code() byte
+}
+    本次就用较为普通的压缩算法作为默认实现。
+```
+
+
+### 实现逻辑
+
+实现压缩，我们放在最后一步，在序列化之后。用户将序列化好的数据，传入压缩的实现。最后发送请求或者响应。
+解析请求或响应就相反。
